--- a/render.yaml
+++ b/render.yaml
@@ -3,5 +3,5 @@ services:
   name: product_management_console
   env: python
   plan: free
-  buildCommand: ""
+  buildCommand: pip install -r requirements.txt
   startCommand: gunicorn -k uvicorn.workers.UvicornWorker app.main:app
